--- a/index.html
+++ b/index.html
@@ -15,7 +15,56 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=lJkEEq"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=lJkEEq" type="text/css">
 
-  
+     <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ui8n4grfK8-modal">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="carousel slide" id="lb-ui8n4grfK8" data-interval="5000" data-bs-interval="5000">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="assets/images/gallery03.jpg" alt="Mobirise Website Builder">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/images/gallery13.jpg" alt="Mobirise Website Builder">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/images/gallery10.jpg" alt="Mobirise Website Builder">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/images/gallery08.jpg" alt="Mobirise Website Builder">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/images/gallery06.jpg" alt="Mobirise Website Builder">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/images/gallery02.jpg" alt="Mobirise Website Builder">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/images/gallery01.jpg" alt="Mobirise Website Builder">
+                                </div>
+                            </div>
+                            <ol class="carousel-indicators">
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-ui8n4grfK8" data-bs-target="#lb-ui8n4grfK8"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ui8n4grfK8" data-bs-target="#lb-ui8n4grfK8"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ui8n4grfK8" data-bs-target="#lb-ui8n4grfK8"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ui8n4grfK8" data-bs-target="#lb-ui8n4grfK8"></li>
+                                <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ui8n4grfK8" data-bs-target="#lb-ui8n4grfK8"></li>
+                                <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ui8n4grfK8" data-bs-target="#lb-ui8n4grfK8"></li>
+                                <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ui8n4grfK8" data-bs-target="#lb-ui8n4grfK8"></li>
+                            </ol>
+                            <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
+                            </a>
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-ui8n4grfK8">
+                                <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
+                                <span class="sr-only visually-hidden">Previous</span>
+                            </a>
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-ui8n4grfK8">
+                                <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
+                                <span class="sr-only visually-hidden">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
   
   
 </head>
